bpo-32028: Fix custom print suggestion having leading whitespace in print statement